// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalHeader /> ref should work 1`] = `
.c0 {
  padding-top: 16px;
  padding-left: 24px;
  padding-right: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-style: normal;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 133.33%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0;
  margin-bottom: 0;
}

<div
  class="poodle-box poodle-modal-header c0"
>
  <h2
    class="poodle-box poodle-modal-header__content c1"
  >
    ModalHeader
  </h2>
</div>
`;

exports[`<ModalHeader /> should render Box props correctly 1`] = `
.c0 {
  padding-top: 16px;
  padding-left: 24px;
  padding-right: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-style: normal;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 133.33%;
  margin-top: 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0;
  margin-bottom: 0;
}

.c2 {
  height: 2rem;
  width: 2rem;
  font-size: 2rem;
  margin-right: 8px;
  padding-left: 20px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 0;
  padding: 8px;
  pointer-events: initial;
  font-size: 1.5rem;
  color: #282828;
  cursor: pointer;
  background-color: transparent;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-transition: background-color 220ms ease-in,color 220ms ease-in;
  transition: background-color 220ms ease-in,color 220ms ease-in;
  border-radius: 50%;
  margin-left: auto;
  padding-left: 20px;
}

.c3:hover,
.c3:focus {
  color: #282828;
  background-color: #E0E0E0;
}

.c3:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<div
  class="poodle-box poodle-modal-header c0"
  id="id"
>
  <h2
    class="poodle-box poodle-modal-header__content c1"
  >
    <div
      class="poodle-box poodle-modal-header__icon c2"
    >
      <i>
        Icon
      </i>
    </div>
    ModalHeader
  </h2>
  <button
    aria-label="Close"
    class="poodle-box poodle-icon-button poodle-modal-header__close c3"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        clip-rule="evenodd"
        d="M8.071 6.343a1 1 0 1 0-1.414 1.414L10.899 12l-4.242 4.243a1 1 0 0 0 1.414 1.414l4.243-4.243 4.242 4.243a1 1 0 0 0 1.415-1.414L13.728 12l4.243-4.243a1 1 0 0 0-1.415-1.414l-4.242 4.243L8.07 6.343z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`<ModalHeader /> should render ModalHeader correctly 1`] = `
.c0 {
  padding-top: 16px;
  padding-left: 24px;
  padding-right: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-style: normal;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 133.33%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0;
  margin-bottom: 0;
}

<div
  class="poodle-box poodle-modal-header c0"
>
  <h2
    class="poodle-box poodle-modal-header__content c1"
  >
    ModalHeader
  </h2>
</div>
`;

exports[`<ModalHeader /> should render ModalHeader with auto id correctly 1`] = `
.c0 {
  padding-top: 16px;
  padding-left: 24px;
  padding-right: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-style: normal;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 133.33%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0;
  margin-bottom: 0;
}

<div
  class="poodle-box poodle-modal-header c0"
  id="id"
>
  <h2
    class="poodle-box poodle-modal-header__content c1"
  >
    ModalHeader
  </h2>
</div>
`;

exports[`<ModalHeader /> should render ModalHeader with close correctly 1`] = `
.c0 {
  padding-top: 16px;
  padding-left: 24px;
  padding-right: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-style: normal;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 133.33%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0;
  margin-bottom: 0;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 0;
  padding: 8px;
  pointer-events: initial;
  font-size: 1.5rem;
  color: #282828;
  cursor: pointer;
  background-color: transparent;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-transition: background-color 220ms ease-in,color 220ms ease-in;
  transition: background-color 220ms ease-in,color 220ms ease-in;
  border-radius: 50%;
  margin-left: auto;
}

.c2:hover,
.c2:focus {
  color: #282828;
  background-color: #E0E0E0;
}

.c2:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<div
  class="poodle-box poodle-modal-header c0"
>
  <h2
    class="poodle-box poodle-modal-header__content c1"
  >
    ModalHeader
  </h2>
  <button
    aria-label="Close"
    class="poodle-box poodle-icon-button poodle-modal-header__close c2"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        clip-rule="evenodd"
        d="M8.071 6.343a1 1 0 1 0-1.414 1.414L10.899 12l-4.242 4.243a1 1 0 0 0 1.414 1.414l4.243-4.243 4.242 4.243a1 1 0 0 0 1.415-1.414L13.728 12l4.243-4.243a1 1 0 0 0-1.415-1.414l-4.242 4.243L8.07 6.343z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`<ModalHeader /> should render ModalHeader with icon correctly 1`] = `
.c0 {
  padding-top: 16px;
  padding-left: 24px;
  padding-right: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-style: normal;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 133.33%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0;
  margin-bottom: 0;
}

.c2 {
  height: 2rem;
  width: 2rem;
  font-size: 2rem;
  margin-right: 8px;
}

<div
  class="poodle-box poodle-modal-header c0"
>
  <h2
    class="poodle-box poodle-modal-header__content c1"
  >
    <div
      class="poodle-box poodle-modal-header__icon c2"
    >
      <i>
        Icon
      </i>
    </div>
    ModalHeader
  </h2>
</div>
`;

exports[`<ModalHeader /> theming should extend styles in global 1`] = `
.c0 {
  padding-top: 16px;
  padding-left: 24px;
  padding-right: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
  font-style: normal;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 133.33%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0;
  margin-bottom: 0;
  margin-top: 13px;
  letter-spacing: 253px;
  top: 3px;
  text-indent: 4px;
}

.c2 {
  height: 2rem;
  width: 2rem;
  font-size: 2rem;
  margin-right: 8px;
  margin-top: 11px;
  letter-spacing: 251px;
  top: 1px;
  text-indent: 2px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 0;
  padding: 8px;
  pointer-events: initial;
  font-size: 1.5rem;
  color: #282828;
  cursor: pointer;
  background-color: transparent;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-transition: background-color 220ms ease-in,color 220ms ease-in;
  transition: background-color 220ms ease-in,color 220ms ease-in;
  border-radius: 50%;
  margin-left: auto;
  margin-top: 12px;
  letter-spacing: 252px;
  top: 2px;
  text-indent: 3px;
}

.c3:hover,
.c3:focus {
  color: #282828;
  background-color: #E0E0E0;
}

.c3:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<div
  class="poodle-box poodle-modal-header c0"
>
  <h2
    class="poodle-box poodle-modal-header__content c1"
  >
    <div
      class="poodle-box poodle-modal-header__icon c2"
    >
      <i>
        Icon
      </i>
    </div>
    ModalHeader
  </h2>
  <button
    aria-label="Close"
    class="poodle-box poodle-icon-button poodle-modal-header__close c3"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        clip-rule="evenodd"
        d="M8.071 6.343a1 1 0 1 0-1.414 1.414L10.899 12l-4.242 4.243a1 1 0 0 0 1.414 1.414l4.243-4.243 4.242 4.243a1 1 0 0 0 1.415-1.414L13.728 12l4.243-4.243a1 1 0 0 0-1.415-1.414l-4.242 4.243L8.07 6.343z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`<ModalHeader /> theming should extend styles in local 1`] = `
.c0 {
  padding-top: 16px;
  padding-left: 24px;
  padding-right: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
  font-style: normal;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 133.33%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0;
  margin-bottom: 0;
  margin-top: 13px;
  letter-spacing: 253px;
  top: 3px;
  text-indent: 4px;
}

.c2 {
  height: 2rem;
  width: 2rem;
  font-size: 2rem;
  margin-right: 8px;
  margin-top: 11px;
  letter-spacing: 251px;
  top: 1px;
  text-indent: 2px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 0;
  padding: 8px;
  pointer-events: initial;
  font-size: 1.5rem;
  color: #282828;
  cursor: pointer;
  background-color: transparent;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-transition: background-color 220ms ease-in,color 220ms ease-in;
  transition: background-color 220ms ease-in,color 220ms ease-in;
  border-radius: 50%;
  margin-left: auto;
  margin-top: 12px;
  letter-spacing: 252px;
  top: 2px;
  text-indent: 3px;
}

.c3:hover,
.c3:focus {
  color: #282828;
  background-color: #E0E0E0;
}

.c3:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<div
  class="poodle-box poodle-modal-header c0"
>
  <h2
    class="poodle-box poodle-modal-header__content c1"
  >
    <div
      class="poodle-box poodle-modal-header__icon c2"
    >
      <i>
        Icon
      </i>
    </div>
    ModalHeader
  </h2>
  <button
    aria-label="Close"
    class="poodle-box poodle-icon-button poodle-modal-header__close c3"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        clip-rule="evenodd"
        d="M8.071 6.343a1 1 0 1 0-1.414 1.414L10.899 12l-4.242 4.243a1 1 0 0 0 1.414 1.414l4.243-4.243 4.242 4.243a1 1 0 0 0 1.415-1.414L13.728 12l4.243-4.243a1 1 0 0 0-1.415-1.414l-4.242 4.243L8.07 6.343z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`<ModalHeader /> theming should override styles 1`] = `
.c0 {
  margin-top: 50px;
  font-style: normal;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 133.33%;
}

.c1 {
  margin-top: 53px;
}

.c2 {
  margin-top: 51px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 0;
  padding: 8px;
  pointer-events: initial;
  font-size: 1.5rem;
  color: #282828;
  cursor: pointer;
  background-color: transparent;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-transition: background-color 220ms ease-in,color 220ms ease-in;
  transition: background-color 220ms ease-in,color 220ms ease-in;
  border-radius: 50%;
  margin-top: 52px;
}

.c3:hover,
.c3:focus {
  color: #282828;
  background-color: #E0E0E0;
}

.c3:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<div
  class="poodle-box poodle-modal-header c0"
>
  <h2
    class="poodle-box poodle-modal-header__content c1"
  >
    <div
      class="poodle-box poodle-modal-header__icon c2"
    >
      <i>
        Icon
      </i>
    </div>
    ModalHeader
  </h2>
  <button
    aria-label="Close"
    class="poodle-box poodle-icon-button poodle-modal-header__close c3"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        clip-rule="evenodd"
        d="M8.071 6.343a1 1 0 1 0-1.414 1.414L10.899 12l-4.242 4.243a1 1 0 0 0 1.414 1.414l4.243-4.243 4.242 4.243a1 1 0 0 0 1.415-1.414L13.728 12l4.243-4.243a1 1 0 0 0-1.415-1.414l-4.242 4.243L8.07 6.343z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`<ModalHeader /> theming should render with default props correctly 1`] = `
.c0 {
  padding-top: 16px;
  padding-left: 24px;
  padding-right: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-style: normal;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 133.33%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0;
  margin-bottom: 0;
}

.c2 {
  height: 2rem;
  width: 2rem;
  font-size: 2rem;
  margin-right: 8px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 0;
  padding: 8px;
  pointer-events: initial;
  font-size: 1.5rem;
  color: #282828;
  cursor: pointer;
  background-color: transparent;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-transition: background-color 220ms ease-in,color 220ms ease-in;
  transition: background-color 220ms ease-in,color 220ms ease-in;
  border-radius: 50%;
  margin-left: auto;
}

.c3:hover,
.c3:focus {
  color: #282828;
  background-color: #E0E0E0;
}

.c3:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<div
  class="poodle-box poodle-modal-header hello c0"
  id="id"
>
  <h2
    class="poodle-box poodle-modal-header__content c1"
  >
    <div
      class="poodle-box poodle-modal-header__icon c2"
    >
      <i>
        Icon
      </i>
    </div>
    ModalHeader
  </h2>
  <button
    aria-label="Close"
    class="poodle-box poodle-icon-button poodle-modal-header__close c3"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        clip-rule="evenodd"
        d="M8.071 6.343a1 1 0 1 0-1.414 1.414L10.899 12l-4.242 4.243a1 1 0 0 0 1.414 1.414l4.243-4.243 4.242 4.243a1 1 0 0 0 1.415-1.414L13.728 12l4.243-4.243a1 1 0 0 0-1.415-1.414l-4.242 4.243L8.07 6.343z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;
